/*
The file is generated by a scaffold script
@author: Arkan M. Gerges<arkan.m.gerges@gmail.com>
*/


syntax = "proto3";
package cafm.project.lookup.subcontractor;
import "project/lookup/subcontractor/country.proto";
import "project/lookup/subcontractor/city.proto";
import "project/lookup/subcontractor/state.proto";
import "project/lookup/subcontractor/subcontractor_category.proto";

message Subcontractor {
  string id = 1;
  string companyName = 2;
  string websiteUrl = 3;
  string contactPerson = 4;
  string email = 5;
  string phoneNumber = 6;
  string addressOne = 7;
  string addressTwo = 8;
  string description = 9;
  string postalCode = 10;
  SubcontractorCategory subcontractorCategory = 11;
  Country country = 12;
  State state = 13;
  City city = 14;
}
